fix alignment on carousel

--- a/frontHorrorFootageFinder/src/components/Carousel/carousel.scss
+++ b/frontHorrorFootageFinder/src/components/Carousel/carousel.scss
@@ -11,11 +11,13 @@
         width: 100%;
         overflow-x: auto;
         white-space: nowrap;
+        display: flex;
+        align-items: flex-start;
     }
 
     &__movie {
         display: inline-block;
-        width: 100%;
+        min-width: 100%;
     }
 
     &__arrow-back {
